from 2.4.13 to 2.4.14
- limiting memory consumtion of the cache layer to stay below 10 MiB, under
  certain circumstances (very large archive), it could grow up to an insane
  value like 50% or the available RAM. reducing to 10 MiB does not impact
  performance in a noticable manner while it avoids system to swap out when
  the cache layer becomes huge.

from 2.4.12 to 2.4.13
- adding initialization value for two variables to avoid inappropriate
  warning when compiling with -Wall option
- reducing UNIX_PATH_MAX by the system when not defined from 108 to 104
  bytes to accommodate BSD systems
- fixing assignment operator of class criterium that was not returning
  any value as it should
- removing useless boolean expression that always succeeds in logical
  AND expression
- adding support for back-slash of quoting characters in DCF files
- fixed compilation issues with clang / FreeBSD, Thanks to Neil
  Darlow's server ;-)
- fixed compilation warning due to deprecated symbols in libgcrypt
  header files
- replaced gnu make specific rules by legacy ones to avoid automake
  warning about them
- removed old unused stuff from misc sub-directory
- adding warning at compilation time if libgcrypt used is older than
  1.6.0
- adding warning at execution time if hash computation is requested
  with slices greater than 256 Gio and ligbcrypt dynamically or
  statically linked is older than 1.6.0
- adding alternative methods in list_entry API class to return dates as
  number of seconds
- fixed bug in hour-shift (-H option) when comparing dates from an old
  extracted catalogue (archive format 7 or older).
- fixed documentation bug about the meaning of the compression ratio
- fixed a display bug about the "compression flag" wrongly displayed
  for uncompressed files
- fixed unhandled exception when giving non number argument to -1 option

from 2.4.11 to 2.4.12
- for correctness fixed delete vs delete[] on vector of char (not incidence
  reported)